chore(auth): add signup handler and refactor login handler
